--- a/HAMS/app/src/main/res/layout/activity_main.xml
+++ b/HAMS/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,10 @@
         android:text="@string/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/form_redirect"
+        android:layout_width="99dp"
+        android:layout_height="wrap_content"
+        android:text="Info Form" />
 </LinearLayout>
