--- a/HAMS/app/src/main/res/values/themes.xml
+++ b/HAMS/app/src/main/res/values/themes.xml
@@ -6,4 +6,11 @@
     </style>
 
     <style name="Theme.HAMS" parent="Base.Theme.HAMS" />
+  <!-- Base application theme. -->
+    <style name="Base.Theme.Material3.Dark" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
+
+    <style name="Theme.Material3.Dark" parent="Base.Theme.Material3.Dark" />
 </resources>
