--- a/HAMS/app/src/main/res/layout/activity_info_form.xml
+++ b/HAMS/app/src/main/res/layout/activity_info_form.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
+    android:paddingHorizontal="25dp"
+    android:showDividers="middle"
     tools:context=".InfoForm">
     
     <ScrollView
@@ -21,6 +24,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="40sp"
+                android:fontFamily="@font/open_sans_bold"
+                android:gravity="center"
+                android:layout_marginVertical="10dp"
                 android:text="Account Information"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -122,9 +128,12 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans_bold"
                 android:textSize="25sp"
-                android:text="Select your age">
+                android:text="Select your age"
+                android:gravity="center">
             </TextView>
+
             <com.google.android.material.button.MaterialButton
+                android:layout_gravity="center"
                 android:id="@+id/age_select"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -144,7 +153,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="22sp"
-                android:layout_gravity="right"
                 android:backgroundTint="@color/cardview_light_background"
                 android:text="Doctor">
             </Button>
@@ -153,7 +161,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="22sp"
-                android:layout_gravity="left"
                 android:backgroundTint="@color/cardview_light_background"
                 android:text="Patient">
             </Button>
