--- a/HAMS/app/src/main/res/layout/activity_main.xml
+++ b/HAMS/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:text=""
-        android:id="@+id/emailText"
+        android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
