--- a/HAMS/app/src/main/res/layout/activity_info_form.xml
+++ b/HAMS/app/src/main/res/layout/activity_info_form.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:paddingHorizontal="25dp"
     android:showDividers="middle"
-    tools:context=".InfoForm">
+    tools:context=".UI.InfoForm">
     
     <ScrollView
         android:layout_width="match_parent"
