--- a/HAMS/app/src/main/res/layout/activity_login.xml
+++ b/HAMS/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:paddingHorizontal="25dp"
-    tools:context=".Login">
+    tools:context=".UI.Login">
 
     <TextView
         android:id="@+id/textView"
