--- a/HAMS/app/src/main/res/layout/activity_register.xml
+++ b/HAMS/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:paddingHorizontal="25dp"
-    tools:context=".Register">
+    tools:context=".UI.Register">
 
     <TextView
         android:id="@+id/textView"
