--- a/HAMS/app/src/main/res/layout/activity_info_form.xml
+++ b/HAMS/app/src/main/res/layout/activity_info_form.xml
@@ -168,7 +168,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/healthcard"
+                    android:id="@+id/healthNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Healthcard Number" />
