--- a/HAMS/app/src/main/res/layout/fragment_admin.xml
+++ b/HAMS/app/src/main/res/layout/fragment_admin.xml
@@ -10,20 +10,18 @@
     tools:context=".UI.MainActivity">
 
     <TextView
-        android:text=""
-        android:id="@+id/welcomeText"
+        android:text="@string/admin_inbox"
+        android:textSize="40sp"
+        android:id="@+id/inboxTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/btn_logout"
-        android:text="@string/logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/form_redirect"
-        android:layout_width="99dp"
         android:layout_height="wrap_content"
-        android:text="Info Form" />
+        android:layout_marginVertical="20sp"/>
+
+
+
+    <Button
+        android:id="@+id/btn_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/home" />
 </LinearLayout>
