--- a/HAMS/app/src/main/res/navigation/nav_graph.xml
+++ b/HAMS/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_home_to_login"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_home_to_admin"
+            app:destination="@id/adminFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -42,5 +45,8 @@
         android:name="com.seg2105.hams.UI.AdminFragment"
         android:label="Admin"
         tools:layout="@layout/fragment_admin">
+        <action
+            android:id="@+id/action_admin_to_home"
+            app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
