--- a/HAMS/app/src/main/res/layout/fragment_person.xml
+++ b/HAMS/app/src/main/res/layout/fragment_person.xml
@@ -15,16 +15,39 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:textSize="20sp"
+        android:gravity="center"
         />
     <TextView
         android:text=""
         android:id="@+id/address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:textSize="20sp"
+        android:gravity="center"
         />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_accept"
+            android:text="@string/accept"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:visibility="visible"
+            />
+        <Button
+            android:id="@+id/btn_reject"
+            android:text="@string/reject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:visibility="visible"
+            />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_back"
