--- a/HAMS/app/src/main/res/layout/fragment_person.xml
+++ b/HAMS/app/src/main/res/layout/fragment_person.xml
@@ -4,57 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="top"
     android:orientation="vertical"
-    android:gravity="center"
     android:paddingHorizontal="25dp"
-    tools:context=".UI.MainActivity"
-    >
+    tools:context=".UI.MainActivity">
 
     <TextView
-        android:text=""
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top|center"
+        android:textSize="25sp"
+        android:text="User Info" />
+
+    <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:gravity="center"
-        />
-    <TextView
+        android:gravity="left|top"
         android:text=""
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/phone_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left|top"
+        android:text=""
+        android:textSize="20sp" />
+    <TextView
         android:id="@+id/address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:gravity="center"
-        />
-
-    <LinearLayout
+        android:gravity="left|top"
+        android:text=""
+        android:textSize="20sp" />
+    <TextView
+        android:id="@+id/health_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="left|top"
+        android:text=""
+        android:textSize="20sp" />
+    <TextView
+        android:id="@+id/employee_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left|top"
+        android:text=""
+        android:textSize="20sp" />
+    <TextView
+        android:id="@+id/specialties"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left|top"
+        android:text=""
+        android:textSize="20sp" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
+
         <Button
             android:id="@+id/btn_accept"
-            android:text="@string/accept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:visibility="visible"
-            />
+            android:text="@string/accept"
+            android:visibility="visible" />
+
         <Button
             android:id="@+id/btn_reject"
-            android:text="@string/reject"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:visibility="visible"
-            />
+            android:text="@string/reject"
+            android:visibility="visible" />
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_back"
-        android:text="@string/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:layout_margin="10sp"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/back" />
 
 
 </LinearLayout>
