--- a/HAMS/app/src/main/res/layout/fragment_person.xml
+++ b/HAMS/app/src/main/res/layout/fragment_person.xml
@@ -20,7 +20,7 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|top"
+        android:layout_gravity="center"
         android:text=""
         android:textSize="20sp" />
 
@@ -28,35 +28,35 @@
         android:id="@+id/phone_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|top"
+        android:layout_gravity="center"
         android:text=""
         android:textSize="20sp" />
     <TextView
         android:id="@+id/address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|top"
+        android:layout_gravity="center"
         android:text=""
         android:textSize="20sp" />
     <TextView
         android:id="@+id/health_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|top"
+        android:layout_gravity="center"
         android:text=""
         android:textSize="20sp" />
     <TextView
         android:id="@+id/employee_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|top"
+        android:layout_gravity="center"
         android:text=""
         android:textSize="20sp" />
     <TextView
         android:id="@+id/specialties"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|top"
+        android:layout_gravity="center"
         android:text=""
         android:textSize="20sp" />
 
