--- a/HAMS/app/src/main/res/layout/fragment_home.xml
+++ b/HAMS/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,12 @@
         android:layout_height="wrap_content"
         android:visibility="invisible"/>
     <Button
+        android:id="@+id/btn_doctor"
+        android:text="@string/go_to_doctor_inbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"/>
+    <Button
         android:id="@+id/btn_logout"
         android:text="@string/logout"
         android:layout_width="wrap_content"
