Shift functionality complete

--- a/HAMS/app/src/main/res/layout/item_shift.xml
+++ b/HAMS/app/src/main/res/layout/item_shift.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginVertical="15sp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -41,10 +42,10 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/cancelButton"
-        android:layout_width="150sp"
+        android:layout_width="120sp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:text="Cancel"
-        android:layout_marginEnd="40sp"/>
+        android:layout_marginEnd="20sp"/>
 
 </LinearLayout>
