--- a/HAMS/app/src/main/res/layout/fragment_shift.xml
+++ b/HAMS/app/src/main/res/layout/fragment_shift.xml
@@ -91,40 +91,53 @@
         android:background="@android:color/darker_gray"
         android:layout_margin="15sp"/>
 
-    <ScrollView
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:divider="@drawable/divider"
+        android:gravity="top"
+        android:orientation="vertical"
+        android:showDividers="middle">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/upcoming"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:divider="@drawable/divider"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:showDividers="middle">
+            android:layout_marginVertical="20sp"
+            android:text="Upcoming Shifts"
+            android:layout_gravity="center"
+            android:textSize="20sp" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewUpcoming"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/upcoming"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <!-- Other content above the Button -->
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/btnHome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="20sp"
-                android:text="Upcoming Shifts"
-                android:textSize="20sp" />
+                android:text="@string/home"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewUpcoming"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+        </RelativeLayout>
+    </LinearLayout>
 
-        </LinearLayout>
-    </ScrollView>
-    <Button
-        android:id="@+id/btnHome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/home"
-        android:layout_gravity="center"
-        android:layout_margin="10sp"/>
 
 </LinearLayout>
