--- a/HAMS/app/src/main/res/layout/fragment_appointment.xml
+++ b/HAMS/app/src/main/res/layout/fragment_appointment.xml
@@ -4,13 +4,71 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:layout_marginHorizontal="15sp"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".UI.DoctorFragment">
 
     <TextView
+        android:text="Appointments"
+        android:textSize="40sp"
+        android:id="@+id/inboxTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is appointment"
-        android:textSize="40sp"/>
+        android:layout_marginVertical="20sp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:divider="@drawable/divider"
+        android:gravity="top"
+        android:orientation="vertical"
+        android:showDividers="middle">
+
+            <TextView
+                android:text="@string/pending"
+                android:textSize="20sp"
+                android:id="@+id/pendingTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20sp"
+                android:layout_gravity="center"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewPending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="@string/approved"
+                android:textSize="20sp"
+                android:id="@+id/approvedTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20sp"
+                android:layout_gravity="center"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewAccepted"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+                <Button
+                    android:id="@+id/btn_acceptAll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/accept_all"
+                    android:layout_margin="10sp"/>
+                <Button
+                    android:id="@+id/btn_home"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home"
+                    android:layout_margin="10sp"/>
+            </LinearLayout>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
