--- a/HAMS/app/src/main/res/layout/fragment_person.xml
+++ b/HAMS/app/src/main/res/layout/fragment_person.xml
@@ -59,6 +59,27 @@
         android:layout_gravity="center"
         android:text=""
         android:textSize="20sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/appointmentTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text=""
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/appointmentID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text=""
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
 
 
     <LinearLayout
