--- a/HAMS/app/src/main/res/layout/item_appointment.xml
+++ b/HAMS/app/src/main/res/layout/item_appointment.xml
@@ -22,6 +22,12 @@
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/appointmentID"
+            android:text="appointmentID"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 </LinearLayout>
