--- a/HAMS/app/src/main/res/layout/fragment_appointment.xml
+++ b/HAMS/app/src/main/res/layout/fragment_appointment.xml
@@ -48,17 +48,23 @@
                 android:id="@+id/recyclerViewAccepted"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+            <TextView
+                android:text="Past Appointments"
+                android:textSize="20sp"
+                android:id="@+id/pastTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20sp"
+                android:layout_gravity="center"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewPast"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="center">
-                <Button
-                    android:id="@+id/btn_acceptAll"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/accept_all"
-                    android:layout_margin="10sp"/>
                 <Button
                     android:id="@+id/btn_home"
                     android:layout_width="wrap_content"
