--- a/HAMS/app/src/main/res/layout/fragment_patient.xml
+++ b/HAMS/app/src/main/res/layout/fragment_patient.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingHorizontal="25dp"
-    tools:context=".UI.MainActivity">
+    android:paddingHorizontal="25dp">
 
     <TextView
         android:text="@string/appointments"
@@ -33,7 +32,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/view_pager"
+        android:id="@+id/view_pagerPatient"
         />
 
 
