--- a/HAMS/app/src/main/res/layout/fragment_doctor.xml
+++ b/HAMS/app/src/main/res/layout/fragment_doctor.xml
@@ -33,7 +33,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/view_pager"
+        android:id="@+id/view_pagerDoctor"
         />
 
 
