--- a/HAMS/app/src/main/res/layout/fragment_home.xml
+++ b/HAMS/app/src/main/res/layout/fragment_home.xml
@@ -27,6 +27,12 @@
         android:layout_height="wrap_content"
         android:visibility="invisible"/>
     <Button
+        android:id="@+id/btn_patient"
+        android:text="Appointments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"/>
+    <Button
         android:id="@+id/btn_logout"
         android:text="@string/logout"
         android:layout_width="wrap_content"
