--- a/HAMS/app/src/main/res/layout/item_searchresults.xml
+++ b/HAMS/app/src/main/res/layout/item_searchresults.xml
@@ -5,18 +5,13 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/name"
+        android:text="@string/name"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center">
-        <TextView
-            android:id="@+id/name"
-            android:text="@string/name"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"/>
-    </LinearLayout>
+        android:layout_marginVertical="20sp"
+        android:textSize="20sp"/>
 
 </LinearLayout>
