--- a/HAMS/app/src/main/res/navigation/nav_graph.xml
+++ b/HAMS/app/src/main/res/navigation/nav_graph.xml
@@ -119,6 +119,9 @@
         <action
             android:id="@+id/action_availableBookings_to_bookingSearchResultsFragment"
             app:destination="@id/bookingSearchResultsFragment" />
+        <action
+            android:id="@+id/action_availableBookings_to_personFragment"
+            app:destination="@id/personFragment" />
     </fragment>
 
     <fragment
