--- a/HAMS/app/src/main/res/layout/fragment_person.xml
+++ b/HAMS/app/src/main/res/layout/fragment_person.xml
@@ -87,6 +87,14 @@
         android:layout_gravity="center"
         android:text=""
         android:textSize="20sp" />
+    <TextView
+        android:id="@+id/rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text=""
+        android:visibility="gone"
+        android:textSize="20sp" />
 
 
 
@@ -118,6 +126,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
             android:text="@string/cancel"
+            android:visibility="gone" />
+        <Button
+            android:id="@+id/btn_rate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:text="@string/rate"
             android:visibility="gone" />
     </LinearLayout>
 
